[package]
name = "reasonable-excuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["multipart"] }
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
knuffel = "2.0"
miette = { version = "4.7", features = ["fancy"] }
rand = "0.8"
reqwest = "0.11"
