[package]
name = "reasonable-excuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1.33", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
knuffel = "3.2"
miette = { version = "5.10", features = ["fancy"] }
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
regex = "1.10"
